--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MineSeeker.NoActionBar">
+            android:theme="@style/Theme.MineSeeker.NoActionBar"
+            android:screenOrientation= "landscape">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
