--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,23 @@
     package="com.cmpt276.mineseeker">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MineSeeker">
+        android:theme="@style/Theme.MineSeeker.NoActionBar"
+        android:fullBackupContent="false"
+        android:allowBackup="false">
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="true"
+            android:screenOrientation= "landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
